--- a/git-switch.man
+++ b/git-switch.man
@@ -18,6 +18,9 @@ Don't use interactive mode. Interactive by default.
 .TP
 .BR \-c " " \fINUMBER\fR ", " \-\-count " " \fINUMBER\fR
 Show \fINUMBER\fP of branches.
+.TP
+.BR \-v ", " \--version
+Show version number and quit.
 .SH CONFIGURATION
 See git-config(1) for core variables.
 .TP
