--- a/git-switch.man
+++ b/git-switch.man
@@ -16,7 +16,7 @@ Show last modified branches.
 .BR \-i ", " \-\-no-interactive
 Don't use interactive mode. Interactive by default.
 .TP
-.BR \-c " " \fINUMBER\fR ", " \-\-count " " \fINUMBER\fR
+.BR \-c " " \fINUMBER\fR ", " \-\-count =\fINUMBER\fR
 Show \fINUMBER\fP of branches.
 .TP
 .BR \-v ", " \--version
